--- a/stock-price-predictions/package.json
+++ b/stock-price-predictions/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@material-ui/core": "^4.11.4",
     "@progress/kendo-data-query": "^1.5.5",
     "@progress/kendo-drawing": "^1.10.1",
     "@progress/kendo-licensing": "^1.1.4",
