--- a/stock-price-predictions/package.json
+++ b/stock-price-predictions/package.json
@@ -16,6 +16,7 @@
     "@progress/kendo-react-data-tools": "^4.6.0",
     "@progress/kendo-react-dateinputs": "^4.6.0",
     "@progress/kendo-react-dropdowns": "^4.6.0",
+    "@progress/kendo-react-form": "^4.6.0",
     "@progress/kendo-react-grid": "^4.6.0",
     "@progress/kendo-react-inputs": "^4.6.0",
     "@progress/kendo-react-intl": "^4.6.0",
@@ -27,12 +28,14 @@
     "apexcharts": "^3.26.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "chart.js": "^3.3.2",
     "fusioncharts": "^3.17.0",
     "google-maps-react": "^2.0.6",
     "mdbreact": "^5.0.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-bootstrap-icons": "^1.5.0",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-financial-charts": "^1.2.2",
     "react-fusioncharts": "^3.1.2",
